--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.0 (September 6th, 2014)
+- Updated plugin to work with MyBB 1.8
+
+## Version number reset for MyBB 1.8 ##
+
 1.1.1
 - Bug: Fixed Admin CP language error for 1.6.11
 
