--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.1 (February 18th, 2015)
+- Moved hardcoded HTML to template
+- Fixed line break layout on postbit
+- Changed (int)$mybb->input to $mybb->get_input
+
 1.0 (September 6th, 2014)
 - Updated plugin to work with MyBB 1.8
 
