--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,14 @@
+1.3 (October 17th, 2017)
+- Updated javascript links
+- Use my_validate_url
+- Removed PHP closing tags
+- Use THIS_SCRIPT for template caching
+- Caching templates in all postbit areas
+- Updated most mood images to PNG
+- Added ability to add multiple moods at once (Issue #1)
+- Use cache instead of query
+- Indented templates
+
 1.2 (May 9th, 2015)
 - Added PostgreSQL and SQLite support
 - Updated cache delete function
