--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.4 (June 26th, 2021)
+- Added check to see if THIS_SCRIPT is defined
+- Fixed PHP 8.0 errors
+- Use require_once for template updates
+
 1.3 (October 17th, 2017)
 - Updated javascript links
 - Use my_validate_url
