--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+1.5 (May 12th, 2024)
+- Fixed undefined error in Admin CP with PHP 8.2
+
 1.4 (June 26th, 2021)
 - Added check to see if THIS_SCRIPT is defined
 - Fixed PHP 8.0 errors
